--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
 		 <nav>
 			 <ul>
 			 		<li><a href="home.html">Über</a></li>
-				 	<li><a href="Modelle.html">Modelle</a></li>
+				 	<li><a href="Modelle.html">Modelle test</a></li>
 				 	<li><a href="Motorsport.html">Piloten</a></li>
 				 	<li><a href="Racing.html">Racing</a></li>
 			 </ul>
