--- a/home.html
+++ b/home.html
@@ -11,8 +11,8 @@
 		 </div>
 		 <nav>
 			 <ul>
-			 		<li><a href="home.html">Über</a></li>
-				 	<li><a href="Modelle.html">Modelle test</a></li>
+			 		<li><a href="home.html">Home</a></li>
+				 	<li><a href="Modelle.html">Modelle</a></li>
 				 	<li><a href="Motorsport.html">Piloten</a></li>
 				 	<li><a href="Racing.html">Racing</a></li>
 			 </ul>
